refactor: improve sematic header,nav,main

--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -6,14 +6,11 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	
-	<style>
-		
-	</style>
+
+
 </head>
 <body>
 
-<div id="main-area">
 	<header id="header">
 
 
@@ -22,18 +19,19 @@
 					class="red">Restaurant</span></h1>
 		</div>
 
-		<div id="area-menu">
-			<a href="index.html">Home</a>
-			<a href="individual.html">individual</a>
-			<a href="combo-premium.html">Combo Premium</a>
-			<a href="who-we-are.html">Quem Somos</a>
-			<a href="contact.html">Contato</a>
-
-		</div>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="individual.html">individual</a></li>
+				<li><a href="combo-premium.html">Combo Premium</a></li>
+				<li><a href="who-we-are.html">Quem Somos</a></li>
+				<li><a href="contact.html">Contato</a></li>
+			</ul>
+		</nav>
 
 	</header>
 
-	<div id="main-area">
+	<main>
 
 		<h1>Seja bem-vindo à LaCreditas Restaurant!</h1>
 
@@ -77,6 +75,7 @@
 			</div> <!-- post closure -->
 
 		</div>
+	</main>
 
 
 		<div class="side-content">
