--- a/layout-final/combo-premium.html
+++ b/layout-final/combo-premium.html
@@ -91,7 +91,8 @@
           <p>
             Os dois lados da fronteira em um delicioso combo.
             <br />LADO TEX: 4 mini burgers, batatas chips, onion crisps e molho
-            barbecue. <br />LADO MEX: 4 Chili tacos, nachos, jalapeño e
+            barbecue. 
+			<br />LADO MEX: 4 Chili tacos, nachos, jalapeño e
             guacamole.
           </p>
           <a href="#">Leia Mais</a>
