--- a/layout-final/contact.html
+++ b/layout-final/contact.html
@@ -7,46 +7,44 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style-contact.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
-	<style>
-		body {
-		font-family: 'Nunito', sans-serif;
-		}
 
-	</style>
 
 
 </head>
 
 <body>
 
-<div id="main-area">
 
 	<header id="header">
 
 
 		<div id="area-logo">
-			<h1><span class="green">La</span><span class="white">Creditas</span><span
-					class="red">Restaurant</span></h1>
+			<h1><span class="green">La</span>
+				<span class="white">Creditas</span>
+				<span class="red">Restaurant</span>
+			</h1>
 		</div>
 
-		<div id="area-menu">
-			<a href="index.html">Home</a>
-			<a href="individual.html">individual</a>
-			<a href="combo-premium.html">Combo Premium</a>
-			<a href="who-we-are.html">Quem Somos</a>
-			<a href="contact.html">Contato</a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="individual.html">individual</a></li>
+					<li><a href="combo-premium.html">Combo Premium</a></li>
+					<li><a href="who-we-are.html">Quem Somos</a></li>
+					<li><a href="contact.html">Contato</a></li>
+				</ul>
+			</nav>
 
-		</div>
+
 
 	</header>
 
 	
 
-	<div class="area-contact">
+	<main>
 
 
-		<!-- abertura map -->
+		
 		
 			<h1>Venha conhecer nossa casa ! </h1>
 
@@ -56,7 +54,7 @@
 				tabindex="0">
 				</iframe>
 
-		 <!-- fechamento map -->
+		
 
 
 		<div class="form-content">
@@ -83,14 +81,13 @@
 					</fieldset>
 				</form>
 	
-		</div>
-	</div>	
-</div>		
+
+</main>	
 
 
-	<div id="footer">
+	<footer>
 		Todos os direitos reservados
-	</div>
+	</footer>
 
 </body>
 
