--- a/layout-final/contact.html
+++ b/layout-final/contact.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<title>La Creditas Restaurant</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/style-contact.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-
-
-
 </head>
-
 <body>
-
-
 	<header id="header">
-
-
 		<div id="area-logo">
 			<h1><span class="green">La</span>
 				<span class="white">Creditas</span>
@@ -25,70 +16,61 @@
 			</h1>
 		</div>
 
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="individual.html">individual</a></li>
-					<li><a href="combo-premium.html">Combo Premium</a></li>
-					<li><a href="who-we-are.html">Quem Somos</a></li>
-					<li><a href="contact.html">Contato</a></li>
-				</ul>
-			</nav>
-
-
-
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="individual.html">individual</a></li>
+				<li><a href="combo-premium.html">Combo Premium</a></li>
+				<li><a href="who-we-are.html">Quem Somos</a></li>
+				<li><a href="contact.html">Contato</a></li>
+			</ul>
+		</nav>
 	</header>
 
-	
+	<main class="main-contact">
 
-	<main>
+		<h1>Venha conhecer nossa casa ! </h1>
 
-
-		
-		
-			<h1>Venha conhecer nossa casa ! </h1>
-
-				<iframe class="location-map"
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.9890490915263!2d-46.69560548461424!3d-23.604725684661467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce573433dd2aa3%3A0xd5796b9fb756e2b4!2sCreditas!5e0!3m2!1sen!2sbr!4v1612792506772!5m2!1sen!2sbr"
-				width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-				tabindex="0">
-				</iframe>
-
-		
-
+		<iframe class="location-map"
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.9890490915263!2d-46.69560548461424!3d-23.604725684661467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce573433dd2aa3%3A0xd5796b9fb756e2b4!2sCreditas!5e0!3m2!1sen!2sbr!4v1612792506772!5m2!1sen!2sbr"
+			width="600" 
+			height="450" 
+			frameborder="0" 
+			style="border:0;" 
+			allowfullscreen="" 
+			aria-hidden="false"
+			tabindex="0">
+		</iframe>
 
 		<div class="form-content">
 
-			<h3>Preencha nosso formulário <br>para  receber nossas ofertas</h3>
+			<h3>Preencha nosso formulário <br>para receber nossas ofertas</h3>
 
-				<form>
-					<fieldset>
-						<div>
-							<label for="name">Nome:</label>
-							<input type="text" name="name" id="name">
-						</div>
+			<form>
+				<fieldset>
+					<div>
+						<label for="name">Nome:</label>
+						<input type="text" name="name" id="name">
+					</div>
 
-						<div>
-							<label for="email">Email:</label>
-							<input type="text" name="email" id="email">
-						</div>
+					<div>
+						<label for="email">Email:</label>
+						<input type="text" name="email" id="email">
+					</div>
 
-						<div>
-							<label for="message">Mensagem:</label>
-							<textarea name="message" rows="10" cols="100" id="message"></textarea>
-							<button class="button" type="submit" name="button" value="button" id="message">Enviar</button>
-						</div>
-					</fieldset>
-				</form>
+					<div>
+						<label for="message">Mensagem:</label>
+						<textarea name="message" rows="10" cols="100" id="message"></textarea>
+						<button class="button" type="submit" name="button" value="button" id="message">Enviar</button>
+					</div>
+				</fieldset>
+			</form>
+
+	</main>
 	
-
-</main>	
-
-
 	<footer>
 		Todos os direitos reservados
 	</footer>
 
 </body>
-
 </html>
