--- a/layout-final/combo-premium.html
+++ b/layout-final/combo-premium.html
@@ -5,10 +5,6 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header id="header">
@@ -41,11 +37,7 @@
             <img src="/image/imag2.jpg" alt="prato de comida mexicana" />
           </picture>
 
-          <p>
-            2 Tacos de chili con carne 2 burritos de machaca (Carne Assada
-            Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles,
-            nachos, guacamole e onion crisps.
-          </p>
+          <p> 2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps. </p>
 
           <a href="#">Leia Mais</a>
         </div>
@@ -58,10 +50,8 @@
           </picture>
 
           <p>
-            1 quesadilla com recheio à sua escolha: Queijo, frango marinado,
-            pulled pork ou machaca (Carne Assada Desfiada) 4 taquitos de machaca
-            (Carne Assada Desfiada) 4 tostaditas de frango marinado Acompanham
-            frijoles, nachos, jalapeño e salsa da casa.
+            1 quesadilla com recheio à sua escolha: Queijo, frango marinado, pulled pork ou machaca (Carne Assada Desfiada) 4 taquitos de machaca (Carne Assada Desfiada) 4 tostaditas de frango
+            marinado Acompanham frijoles, nachos, jalapeño e salsa da casa.
           </p>
           <a href="#">Leia Mais</a>
         </div>
@@ -74,9 +64,8 @@
           </picture>
 
           <p>
-            2 Tacos California (peixe empanado, alface, guacamole, sour cream,
-            repolho, cebola roxa e pico de gallo) 4 Tostaditas de camarão com
-            guacamole 4 pedaços de quesadilla de queijo Acompanha salsa da casa.
+            2 Tacos California (peixe empanado, alface, guacamole, sour cream, repolho, cebola roxa e pico de gallo) 4 Tostaditas de camarão com guacamole 4 pedaços de quesadilla de queijo Acompanha
+            salsa da casa.
           </p>
           <a href="#">Leia Mais</a>
         </div>
@@ -90,10 +79,7 @@
 
           <p>
             Os dois lados da fronteira em um delicioso combo.
-            <br />LADO TEX: 4 mini burgers, batatas chips, onion crisps e molho
-            barbecue. 
-			<br />LADO MEX: 4 Chili tacos, nachos, jalapeño e
-            guacamole.
+            <br />LADO TEX: 4 mini burgers, batatas chips, onion crisps e molho barbecue. <br />LADO MEX: 4 Chili tacos, nachos, jalapeño e guacamole.
           </p>
           <a href="#">Leia Mais</a>
         </div>
