--- a/layout-final/individual.html
+++ b/layout-final/individual.html
@@ -5,18 +5,11 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header id="header">
       <div id="area-logo">
-        <h1>
-          <span class="green">La</span><span class="white">Creditas</span
-          ><span class="red">Restaurant</span>
-        </h1>
+        <h1> <span class="green">La</span><span class="white">Creditas</span><span class="red">Restaurant</span> </h1>
       </div>
 
       <nav>
@@ -40,10 +33,7 @@
             <img src="/image/imag3.png" alt="prato de comida mexicana" />
           </picture>
 
-          <p>
-            Burrito recheado com alface, pico de gallo, sour cream, queijo e
-            guacamole. Acompanha salsa da casa.
-          </p>
+          <p> Burrito recheado com alface, pico de gallo, sour cream, queijo e guacamole. Acompanha salsa da casa. </p>
           <a href="">Leia Mais</a>
         </div>
 
@@ -54,10 +44,7 @@
             <source srcset="image/image4.png" />
             <img src="/image/image4.png" alt="prato de comida mexicana" />
           </picture>
-          <p>
-            3 deliciosos tacos montados na tortilla crocante de milho, com
-            queijo, alface, pico de gallo e servidos com a nossa guacamole.
-          </p>
+          <p> 3 deliciosos tacos montados na tortilla crocante de milho, com queijo, alface, pico de gallo e servidos com a nossa guacamole. </p>
           <a href="">Leia Mais</a>
         </div>
 
@@ -69,10 +56,7 @@
             <img src="/image/image5.jpg" alt="prato de comida mexicana" />
           </picture>
 
-          <p>
-            3 tacos recheados com carne grelhada, bacon, queijo, onion crisps e
-            pico de gallo. Acompanha nossa maionese.
-          </p>
+          <p> 3 tacos recheados com carne grelhada, bacon, queijo, onion crisps e pico de gallo. Acompanha nossa maionese. </p>
           <a href="">Leia Mais</a>
         </div>
 
@@ -84,10 +68,7 @@
             <img src="/image/image.png" alt="prato de comida mexicana" />
           </picture>
 
-          <p>
-            Nossas incomparáveis tortillas caseiras tostadas e recheadas com
-            queijo derretido e pico de gallo. Acompanha guacamole.
-          </p>
+          <p> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
           <a href="">Leia Mais</a>
         </div>
       </section>
