--- a/layout-final/who-we-are.html
+++ b/layout-final/who-we-are.html
@@ -5,10 +5,6 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
     <header id="header">
@@ -20,13 +16,15 @@
         </h1>
       </div>
 
-      <div id="area-menu">
-        <a href="index.html">Home</a>
-        <a href="individual.html">individual</a>
-        <a href="combo-premium.html">Combo Premium</a>
-        <a href="who-we-are.html">Quem Somos</a>
-        <a href="contact.html">Contato</a>
-      </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="individual.html">individual</a></li>
+          <li><a href="combo-premium.html">Combo Premium</a></li>
+          <li><a href="who-we-are.html">Quem Somos</a></li>
+          <li><a href="contact.html">Contato</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -40,18 +38,11 @@
           </picture>
 
           <p>
-            Ao contrário da crença popular, o Lorem Ipsum não é simplesmente
-            texto aleatório. Tem raízes numa peça de literatura clássica em
-            Latim, de 45 AC, tornando-o com mais de 2000 anos. Richard
-            McClintock, um professor de Latim no Colégio Hampden-Sydney, na
-            Virgínia, procurou uma das palavras em Latim mais obscuras
-            (consectetur) numa passagem Lorem Ipsum, e atravessando as cidades
-            do mundo na literatura clássica, descobriu a sua origem. Lorem Ipsum
-            vem das secções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum"
-            (Os Extremos do Bem e do Mal), por Cícero, escrito a 45AC. Este
-            livro é um tratado na teoria da ética, muito popular durante a
-            Renascença. A primeira linha de Lorem Ipsum, "Lorem ipsum dolor sit
-            amet..." aparece de uma linha na secção 1.10.32
+            Ao contrário da crença popular, o Lorem Ipsum não é simplesmente texto aleatório. Tem raízes numa peça de literatura clássica em Latim, de 45 AC, tornando-o com mais de 2000 anos. Richard
+            McClintock, um professor de Latim no Colégio Hampden-Sydney, na Virgínia, procurou uma das palavras em Latim mais obscuras (consectetur) numa passagem Lorem Ipsum, e atravessando as
+            cidades do mundo na literatura clássica, descobriu a sua origem. Lorem Ipsum vem das secções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), por Cícero,
+            escrito a 45AC. Este livro é um tratado na teoria da ética, muito popular durante a Renascença. A primeira linha de Lorem Ipsum, "Lorem ipsum dolor sit amet..." aparece de uma linha na
+            secção 1.10.32
           </p>
         </div>
       </section>
