--- a/layout-final/contact.html
+++ b/layout-final/contact.html
@@ -10,7 +10,8 @@
 <body>
 	<header id="header">
 		<div id="area-logo">
-			<h1><span class="green">La</span>
+			<h1>
+				<span class="green">La</span>
 				<span class="white">Creditas</span>
 				<span class="red">Restaurant</span>
 			</h1>
