modified span and class header__logo

--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header class="header">
-      <div id="header__logo">
+      <div class="header__logo">
         <h1>
-          <span class="green">La</span>
-          <span class="white">Creditas</span>
-          <span class="red">Restaurant</span>
+          <span class="span--green">La</span>
+          <span class="span--white">Creditas</span>
+          <span class="span--red">Restaurant</span>
         </h1>
       </div>
 
@@ -28,7 +28,6 @@
     </header>
 
     <main class="main">
-
       <h1 class="main__title">Seja bem-vindo à LaCreditas Restaurant!</h1>
 
       <div class="article">
@@ -39,10 +38,7 @@
           <img src="/image/image.png" alt="prato de comida mexicana" />
         </picture>
 
-        <p class="article__desc">
-          Nossas incomparáveis tortillas caseiras tostadas e recheadas com
-          queijo derretido e pico de gallo. Acompanha guacamole.
-        </p>
+        <p class="article__desc"> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
         <a class="article__link" href="#">Leia Mais</a>
       </div>
 
@@ -54,11 +50,9 @@
           <img src="/image/image1.png" alt="prato de comida mexicana" />
         </picture>
 
-        <p  class="article__desc">
-          "Um dos mais tradicionais pratos da culinária TEX-MEX!" Escolha os
-          recheios, monte seus tacos e desfrute dessa delícia. As fajitas são
-          servidas com nachos, tortillas, frijoles, guacamole, molho sour mex e
-          pico de gallo.
+        <p class="article__desc">
+          "Um dos mais tradicionais pratos da culinária TEX-MEX!" Escolha os recheios, monte seus tacos e desfrute dessa delícia. As fajitas são servidas com nachos, tortillas, frijoles, guacamole,
+          molho sour mex e pico de gallo.
         </p>
         <a class="article__link" href="">Leia Mais</a>
       </div>
@@ -72,9 +66,7 @@
         </picture>
 
         <p class="article__desc">
-          2 Tacos de chili con carne 2 burritos de machaca (Carne Assada
-          Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles,
-          nachos, guacamole e onion crisps.
+          2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps.
         </p>
         <a class="article__link" href="#">Leia Mais</a>
       </div>
