add class BEM in index page

--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>La Creditas Restaurant</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/base/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
   </head>
   <body>
@@ -28,10 +28,11 @@
     </header>
 
     <main class="main">
-      <h1 class="main__title">Seja bem-vindo à LaCreditas Restaurant!</h1>
+      <h1 class="main__title">Seja bem-vindo à La Creditas Restaurant!</h1>
 
-      <div class="article">
-        <h2 class="article__subtitle">QUESADILLAS</h2>
+      <section class="section">
+      <article class="article">
+        <h2 class="article__title">QUESADILLAS</h2>
 
         <picture class="article__picture">
           <source srcset="image/image.png" />
@@ -40,10 +41,10 @@
 
         <p class="article__desc"> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
         <a class="article__link" href="#">Leia Mais</a>
-      </div>
+      </article>
 
-      <div class="article">
-        <h2 class="article__subtitle">FAJITAS</h2>
+      <article class="article">
+        <h2 class="article__title">FAJITAS</h2>
 
         <picture>
           <source srcset="image/image1.png" />
@@ -55,10 +56,10 @@
           molho sour mex e pico de gallo.
         </p>
         <a class="article__link" href="">Leia Mais</a>
-      </div>
+      </article>
 
-      <div class="article">
-        <h2 class="article__subtitle">LOS 3 AMIGOS</h2>
+      <article class="article">
+        <h2 class="article__title">LOS 3 AMIGOS</h2>
 
         <picture class="article__picture">
           <source srcset="image/image2.jpg" />
@@ -69,7 +70,8 @@
           2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps.
         </p>
         <a class="article__link" href="#">Leia Mais</a>
-      </div>
+      </article>
+    </section>
     </main>
 
     <footer class="footer">Todos os direitos reservados</footer>
