add flexbox in pages

--- a/layout-final/contact.html
+++ b/layout-final/contact.html
@@ -4,7 +4,9 @@
 	<title>La Creditas Restaurant</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/base/style.css">
+	<link rel="stylesheet" href="css/pages/style-contact.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
+
 </head>
 <body>
     <header class="header">
@@ -31,6 +33,7 @@
 
 		<h1 class="main__title title--contact">Venha conhecer nossa casa ! </h1>
 
+		<div class="flex-row">
 		<iframe class="location-map"
 			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3655.9890490915263!2d-46.69560548461424!3d-23.604725684661467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce573433dd2aa3%3A0xd5796b9fb756e2b4!2sCreditas!5e0!3m2!1sen!2sbr!4v1612792506772!5m2!1sen!2sbr"
 			width="600" 
@@ -42,12 +45,14 @@
 			tabindex="0">
 		</iframe>
 
+		
 		<aside class="aside__form">
 
 			<h3 class="form__desc">Preencha nosso formulário <br>para receber nossas ofertas</h3>
 
 			<form class="form">
 				<fieldset>
+					<div class="form--label">
 					<div>
 						<label for="name">Nome:</label>
 						<input type="text" name="name" id="name">
@@ -63,11 +68,12 @@
 						<textarea name="message" rows="10" cols="100" id="message"></textarea>
 						<button class="button" type="submit" name="button" value="button" id="message">Enviar</button>
 					</div>
+					</div>
 				</fieldset>
 			</form>
-
+		</aside>
+		</div>
 	</main>
-	
 	<footer class="footer">
 		Todos os direitos reservados
 	</footer>
