--- a/layout-final/individual.html
+++ b/layout-final/individual.html
@@ -27,79 +27,76 @@
       </nav>
     </header>
 
-    <main class="main">
-      <section class="section">
-        <article class="article">
-          <h2 class="article_title">BURRITOS</h2>
+    <main class="main main--individual">
+      <section class="section section--individual">
+        <h1 class="main__title">Individuais</h1>
+        <article class="article article--individual">
+          <div>
+            <h2 class="article_title">BURRITOS</h2>
+            <p class="article__desc"> Burrito recheado com alface, pico de gallo, sour cream, queijo e guacamole. Acompanha salsa da casa. </p>
+            <a class="article__link" href="#">Leia Mais</a>
+          </div>
 
           <picture class="article__picture">
-
             <source srcset="image/image3.png" />
             <img src="/image/imag3.png" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc">
-            Burrito recheado com alface, pico de gallo, sour cream, queijo e
-            guacamole. Acompanha salsa da casa.
-          </p>
-          <a  class="article__link" href="#">Leia Mais</a>
         </article>
 
         <article class="article">
-          <h2 class="article__title">CRUNCH TACOS</h2>
+          <div>
+            <h2 class="article__title">CRUNCH TACOS</h2>
+            <p class="article__desc"> 3 deliciosos tacos montados na tortilla crocante de milho, com queijo, alface, pico de gallo e servidos com a nossa guacamole. </p>
+            <a class="article__link" href="#">Leia Mais</a>
+          </div>
 
           <picture class="article__picture">
             <source srcset="image/image4.png" />
             <img src="/image/image4.png" alt="prato de comida mexicana" />
           </picture>
-          <p class="article__desc"> 3 deliciosos tacos montados na tortilla crocante de milho, com queijo, alface, pico de gallo e servidos com a nossa guacamole. </p>
-          <a class="article__link" href="#">Leia Mais</a>
         </article>
 
         <article class="article">
-          <h2 class="article__title">TIJUANA TACOS</h2>
+          <div>
+            <h2 class="article__title">TIJUANA TACOS</h2>
+            <p class="article__desc"> 3 tacos recheados com carne grelhada, bacon, queijo, onion crisps e pico de gallo. Acompanha nossa maionese. </p>
+            <a class="article__link" href="#">Leia Mais</a>
+          </div>
 
           <picture class="article__picture">
             <source srcset="image/image5.jpg" />
             <img src="/image/image5.jpg" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc">
-            3 tacos recheados com carne grelhada, bacon, queijo, onion crisps e
-            pico de gallo. Acompanha nossa maionese.
-          </p>
-          <a class="article__link" href="#">Leia Mais</a>
         </article>
 
         <article class="article">
-          <h2 class="article__title">QUESADILLAS</h2>
+          <div>
+            <h2 class="article__title">QUESADILLAS</h2>
+            <p class="article__desc"> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
+            <a class="article__link" href="#">Leia Mais</a>
+          </div>
 
           <picture class="article__picture">
             <source srcset="image/image.png" />
             <img src="/image/image.png" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc">
-            Nossas incomparáveis tortillas caseiras tostadas e recheadas com
-            queijo derretido e pico de gallo. Acompanha guacamole.
-          </p>
-          <a class="article__link" href="#">Leia Mais</a>
         </article>
       </section>
-    </main>
+    
 
     <aside class="aside">
       <h3 class="aside__title">Individuais</h3>
 
       <nav class="aside__nav">
         <ul class="aside__list">
-          <li class="aside__item"><a  class="aside__link" href="burritos.html">Burritos</a></li>
-          <li class="aside__item"><a  class="aside__link" href="crunch-tacos.html">Crunch Tacos</a></li>
-          <li class="aside__item"><a  class="aside__link" href="tijuana-tacos.html">Tijuana Tacos</a></li>
-          <li class="aside__item"><a  class="aside__link" href="quesadillas.html">Quesadillas</a></li>
+          <li class="aside__item"><a class="aside__link" href="burritos.html">Burritos</a></li>
+          <li class="aside__item"><a class="aside__link" href="crunch-tacos.html">Crunch Tacos</a></li>
+          <li class="aside__item"><a class="aside__link" href="tijuana-tacos.html">Tijuana Tacos</a></li>
+          <li class="aside__item"><a class="aside__link" href="quesadillas.html">Quesadillas</a></li>
         </ul>
       </nav>
     </aside>
+  </main>
 
     <footer class="footer">Todos os direitos reservados</footer>
   </body>
