--- a/layout-final/who-we-are.html
+++ b/layout-final/who-we-are.html
@@ -29,8 +29,8 @@
 
     <main class="main">
       <section class="section">
-        <article class="article">
-          <h2 class="article__title">QUEM SOMOS</h2>
+        <article class="article-contact">
+          <h2 class="article__title title--who-we-are">QUEM SOMOS</h2>
 
           <picture class="article__picture">
             <source srcset="image/image9.jpg" />
