--- a/layout-final/combo-premium.html
+++ b/layout-final/combo-premium.html
@@ -27,77 +27,86 @@
       </nav>
     </header>
 
-    <main class="main">
-      <section class="section">
-        <article class="article">
-          <h2 class="article__title">LOS 3 AMIGOS</h2>
+    <main class="main main--combo-premium">
+      <section class="section section--combo-premium">
+        <h1 class="main__title">Combo Premium</h1>
+        <article class="article article--combo-premium">
+          <div>
+            <h2 class="article__title">LOS 3 AMIGOS</h2>
+            <p class="article__desc">
+              2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps.
+            </p>
+            <a classs="article__link" href="#">Leia Mais</a>
+          </div>
 
           <picture class="article__picture">
             <source srcset="image/image2.jpg" />
             <img src="/image/imag2.jpg" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc"> 2 Tacos de chili con carne 2 burritos de machaca (Carne Assada Desfiada) 2 enchiladas de frango com cheddar Acompanham frijoles, nachos, guacamole e onion crisps. </p>
-
-          <a  classs="article__link" href="#">Leia Mais</a>
         </article>
 
         <article class="article">
-          <h2 class="article__title">LA BUENA ONDA</h2>
+          <div>
+            <h2 class="article__title">LA BUENA ONDA</h2>
+            <p class="article__desc">
+              1 quesadilla com recheio à sua escolha: Queijo, frango marinado, pulled pork ou machaca (Carne Assada Desfiada) 4 taquitos de machaca (Carne Assada Desfiada) 4 tostaditas de frango
+              marinado Acompanham frijoles, nachos, jalapeño e salsa da casa.
+            </p>
+            <a classs="article__link" href="#">Leia Mais</a>
+          </div>
+
           <picture class="article__picture">
             <source srcset="image/image6.jpg" />
             <img src="/image/imag6.jpg" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc">
-            1 quesadilla com recheio à sua escolha: Queijo, frango marinado, pulled pork ou machaca (Carne Assada Desfiada) 4 taquitos de machaca (Carne Assada Desfiada) 4 tostaditas de frango
-            marinado Acompanham frijoles, nachos, jalapeño e salsa da casa.
-          </p>
-          <a  classs="article__link" href="#">Leia Mais</a>
         </article>
 
         <article class="article">
-          <h2 class="article__title">COMBO DEL MAR</h2>
+          <div>
+            <h2 class="article__title">COMBO DEL MAR</h2>
+            <p class="article__desc">
+              2 Tacos California (peixe empanado, alface, guacamole, sour cream, repolho, cebola roxa e pico de gallo) 4 Tostaditas de camarão com guacamole 4 pedaços de quesadilla de queijo Acompanha
+              salsa da casa.
+            </p>
+            <a classs="article__link" href="#">Leia Mais</a>
+          </div>
           <picture class="article__picture">
             <source srcset="image/image7.jpg" />
             <img src="/image/imag7.jpg" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc">
-            2 Tacos California (peixe empanado, alface, guacamole, sour cream, repolho, cebola roxa e pico de gallo) 4 Tostaditas de camarão com guacamole 4 pedaços de quesadilla de queijo Acompanha
-            salsa da casa.
-          </p>
-          <a  classs="article__link" href="#">Leia Mais</a>
         </article>
 
         <article class="article">
-          <h2 class="article__title">LA FRONTERA</h2>
+          <div>
+            <h2 class="article__title">LA FRONTERA</h2>
+            <p class="article__desc">
+              Os dois lados da fronteira em um delicioso combo.
+              <br />LADO TEX: 4 mini burgers, batatas chips, onion crisps e molho barbecue. <br />LADO MEX: 4 Chili tacos, nachos, jalapeño e guacamole.
+            </p>
+            <a classs="article__link" href="#">Leia Mais</a>
+          </div>
+
           <picture class="article__picture">
             <source srcset="image/image8.jpg" />
             <img src="/image/imag8.jpg" alt="prato de comida mexicana" />
           </picture>
-
-          <p class="article__desc">
-            Os dois lados da fronteira em um delicioso combo.
-            <br />LADO TEX: 4 mini burgers, batatas chips, onion crisps e molho barbecue. <br />LADO MEX: 4 Chili tacos, nachos, jalapeño e guacamole.
-          </p>
-          <a  classs="article__link" href="#">Leia Mais</a>
         </article>
       </section>
-    </main>
+    
 
     <aside class="aside">
       <h3 class="aside__title">Combo Premium</h3>
 
       <nav class="aside__nav">
         <ul class="aside__list">
-          <li class="aside__item"><a  class="aside__link" href="los-3-amigos.html">Los 3 Amigos</a></li>
-          <li class="aside__item"><a  class="aside__link" href="la-buena-onda.html">La Buena Onda</a></li>
-          <li class="aside__item"><a  class="aside__link" href="combo-del-mar.html">Combo Del Mar</a></li>
-          <li class="aside__item"><a  class="aside__link" href="la-frontera.html">La frontera</a></li>
+          <li class="aside__item"><a class="aside__link" href="los-3-amigos.html">Los 3 Amigos</a></li>
+          <li class="aside__item"><a class="aside__link" href="la-buena-onda.html">La Buena Onda</a></li>
+          <li class="aside__item"><a class="aside__link" href="combo-del-mar.html">Combo Del Mar</a></li>
+          <li class="aside__item"><a class="aside__link" href="la-frontera.html">La frontera</a></li>
         </ul>
       </nav>
     </aside>
+  </main>
 
     <footer class="footer">Todos os direitos reservados</footer>
   </body>
