--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -4,7 +4,7 @@
     <title>La Creditas Restaurant</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/base/style.css" />
-    <link rel="stylesheet" href="./css/pages/style-home.css">
+    <link rel="stylesheet" href="./css/pages/style-home.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
   </head>
   <body>
