add media queries and BEM classes

--- a/layout-final/combo-premium.html
+++ b/layout-final/combo-premium.html
@@ -45,7 +45,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--combo-premium">
           <div>
             <h2 class="article__title">LA BUENA ONDA</h2>
             <p class="article__desc">
@@ -61,7 +61,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--combo-premium">
           <div>
             <h2 class="article__title">COMBO DEL MAR</h2>
             <p class="article__desc">
@@ -76,7 +76,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--combo-premium">
           <div>
             <h2 class="article__title">LA FRONTERA</h2>
             <p class="article__desc">
