--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -32,7 +32,7 @@
       <section class="section section--home">
         <h1 class="main__title">Seja bem-vindo à La Creditas Restaurant!</h1>
 
-        <article class="article">
+        <article class="article article--home">
           <div>
             <h2 class="article__title">QUESADILLAS</h2>
             <p class="article__desc"> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
@@ -45,7 +45,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--home">
           <div>
             <h2 class="article__title">FAJITAS</h2>
             <p class="article__desc">
@@ -60,7 +60,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--home">
           <div>
             <h2 class="article__title">LOS 3 AMIGOS</h2>
             <p class="article__desc"
