--- a/layout-final/individual.html
+++ b/layout-final/individual.html
@@ -43,7 +43,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--individual">
           <div>
             <h2 class="article__title">CRUNCH TACOS</h2>
             <p class="article__desc"> 3 deliciosos tacos montados na tortilla crocante de milho, com queijo, alface, pico de gallo e servidos com a nossa guacamole. </p>
@@ -56,7 +56,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--individual">
           <div>
             <h2 class="article__title">TIJUANA TACOS</h2>
             <p class="article__desc"> 3 tacos recheados com carne grelhada, bacon, queijo, onion crisps e pico de gallo. Acompanha nossa maionese. </p>
@@ -69,7 +69,7 @@
           </picture>
         </article>
 
-        <article class="article">
+        <article class="article article--individual">
           <div>
             <h2 class="article__title">QUESADILLAS</h2>
             <p class="article__desc"> Nossas incomparáveis tortillas caseiras tostadas e recheadas com queijo derretido e pico de gallo. Acompanha guacamole. </p>
