--- a/layout-final/who-we-are.html
+++ b/layout-final/who-we-are.html
@@ -4,6 +4,7 @@
     <title>La Creditas Restaurant</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/base/style.css" />
+    <link rel="stylesheet" type="text/css" href="css//pages/style-who-we-are.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
   </head>
   <body>
@@ -28,16 +29,16 @@
     </header>
 
     <main class="main">
-      <section class="section">
-        <article class="article-contact">
+      <section class="section section--who-we-are">
+        <article class="article article--who-we-are">
           <h2 class="article__title title--who-we-are">QUEM SOMOS</h2>
 
-          <picture class="article__picture">
+          <picture class="article__picture picture--who-we-are">
             <source srcset="image/image9.jpg" />
             <img src="/image/imag9.jpg" alt="restaurante mexicano" />
           </picture>
 
-          <p class="article__desc">
+          <p class="desc--who-we-are">
             Ao contrário da crença popular, o Lorem Ipsum não é simplesmente texto aleatório. Tem raízes numa peça de literatura clássica em Latim, de 45 AC, tornando-o com mais de 2000 anos. Richard
             McClintock, um professor de Latim no Colégio Hampden-Sydney, na Virgínia, procurou uma das palavras em Latim mais obscuras (consectetur) numa passagem Lorem Ipsum, e atravessando as
             cidades do mundo na literatura clássica, descobriu a sua origem. Lorem Ipsum vem das secções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), por Cícero,
