--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -8,16 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
   </head>
   <body>
-    <header class="header">
-      <div class="header__logo">
-        <h1>
-          <span class="span--green">La</span>
-          <span class="span--white">Creditas</span>
-          <span class="span--red">Restaurant</span>
-        </h1>
-      </div>
-
+    <header class="header parallax">
       <nav class="nav">
+        <div class="header__logo">
+          <h1>
+            <span class="span--green">La</span>
+            <span class="span--white">Creditas</span>
+            <span class="span--red">Restaurant</span>
+          </h1>
+        </div>
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
@@ -25,6 +24,11 @@
           <li class="nav__item"><a class="nav__link" href="who-we-are.html">Quem Somos</a></li>
           <li class="nav__item"><a class="nav__link" href="contact.html">Contato</a></li>
         </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
       </nav>
     </header>
 
