--- a/layout-final/who-we-are.html
+++ b/layout-final/who-we-are.html
@@ -9,15 +9,14 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__logo">
-        <h1>
-          <span class="span--green">La</span>
-          <span class="span--white">Creditas</span>
-          <span class="span--red">Restaurant</span>
-        </h1>
-      </div>
-
       <nav class="nav">
+        <div class="header__logo">
+          <h1>
+            <span class="span--green">La</span>
+            <span class="span--white">Creditas</span>
+            <span class="span--red">Restaurant</span>
+          </h1>
+        </div>
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
@@ -30,21 +29,22 @@
 
     <main class="main">
       <section class="section section--who-we-are">
+        <h2 class="article__title title--who-we-are">QUEM SOMOS</h2>
         <article class="article article--who-we-are">
-          <h2 class="article__title title--who-we-are">QUEM SOMOS</h2>
-
-          <picture class="article__picture picture--who-we-are">
+          <picture class="picture--who-we-are">
             <source srcset="image/image9.jpg" />
             <img src="/image/imag9.jpg" alt="restaurante mexicano" />
           </picture>
 
-          <p class="desc--who-we-are">
-            Ao contrário da crença popular, o Lorem Ipsum não é simplesmente texto aleatório. Tem raízes numa peça de literatura clássica em Latim, de 45 AC, tornando-o com mais de 2000 anos. Richard
-            McClintock, um professor de Latim no Colégio Hampden-Sydney, na Virgínia, procurou uma das palavras em Latim mais obscuras (consectetur) numa passagem Lorem Ipsum, e atravessando as
-            cidades do mundo na literatura clássica, descobriu a sua origem. Lorem Ipsum vem das secções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), por Cícero,
-            escrito a 45AC. Este livro é um tratado na teoria da ética, muito popular durante a Renascença. A primeira linha de Lorem Ipsum, "Lorem ipsum dolor sit amet..." aparece de uma linha na
-            secção 1.10.32
-          </p>
+          <div
+            ><p class="desc--who-we-are">
+              Ao contrário da crença popular, o Lorem Ipsum não é simplesmente texto aleatório. Tem raízes numa peça de literatura clássica em Latim, de 45 AC, tornando-o com mais de 2000 anos.
+              Richard McClintock, um professor de Latim no Colégio Hampden-Sydney, na Virgínia, procurou uma das palavras em Latim mais obscuras (consectetur) numa passagem Lorem Ipsum, e atravessando
+              as cidades do mundo na literatura clássica, descobriu a sua origem. Lorem Ipsum vem das secções 1.10.32 e 1.10.33 do "de Finibus Bonorum et Malorum" (Os Extremos do Bem e do Mal), por
+              Cícero, escrito a 45AC. Este livro é um tratado na teoria da ética, muito popular durante a Renascença. A primeira linha de Lorem Ipsum, "Lorem ipsum dolor sit amet..." aparece de uma
+              linha na secção 1.10.32
+            </p>
+          </div>
         </article>
       </section>
     </main>
