add menu toggle

--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <header class="header parallax">
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <nav class="nav">
         <div class="header__logo">
           <h1>
@@ -20,16 +25,14 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
-          <li class="nav__item"><a class="nav__link" href="combo-premium.html">Combo Premium</a></li>
-          <li class="nav__item"><a class="nav__link" href="who-we-are.html">Quem Somos</a></li>
+          <li class="nav__item"><a class="nav__link" href="combo-premium.html">Premium</a></li>
+          <li class="nav__item"><a class="nav__link" href="who-we-are.html">Sobre</a></li>
           <li class="nav__item"><a class="nav__link" href="contact.html">Contato</a></li>
         </ul>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
       </nav>
+      <div class="header__subtitle">
+        <h2>O melhor da comida mexicana</h2>
+      </div>
     </header>
 
     <main class="main">
@@ -58,7 +61,7 @@
             </p>
             <a class="article__link" href="">Leia Mais</a>
           </div>
-          <picture>
+          <picture class="article__picture">
             <source srcset="image/image1.png" />
             <img src="/image/image1.png" alt="prato de comida mexicana" />
           </picture>
@@ -82,5 +85,6 @@
     </main>
 
     <footer class="footer">Todos os direitos reservados</footer>
+    <script src="../layout-final/script.js"></script>
   </body>
 </html>
