add menu toggle and modify name links

--- a/layout-final/about.html
+++ b/layout-final/about.html
@@ -20,8 +20,8 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
-          <li class="nav__item"><a class="nav__link" href="combo-premium.html">Combo Premium</a></li>
-          <li class="nav__item"><a class="nav__link" href="who-we-are.html">Quem Somos</a></li>
+          <li class="nav__item"><a class="nav__link" href="premium.html">Combo Premium</a></li>
+          <li class="nav__item"><a class="nav__link" href="about.html">Sobre</a></li>
           <li class="nav__item"><a class="nav__link" href="contact.html">Contato</a></li>
         </ul>
       </nav>
