--- a/layout-final/individual.html
+++ b/layout-final/individual.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <header class="header">
-
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
 
       <nav class="nav">
         <div class="header__logo">
@@ -21,8 +25,8 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
-          <li class="nav__item"><a class="nav__link" href="combo-premium.html">Combo Premium</a></li>
-          <li class="nav__item"><a class="nav__link" href="who-we-are.html">Quem Somos</a></li>
+          <li class="nav__item"><a class="nav__link" href="premium.html">Premium</a></li>
+          <li class="nav__item"><a class="nav__link" href="about.html">Sobre</a></li>
           <li class="nav__item"><a class="nav__link" href="contact.html">Contato</a></li>
         </ul>
       </nav>
