--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -25,8 +25,8 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
-          <li class="nav__item"><a class="nav__link" href="combo-premium.html">Premium</a></li>
-          <li class="nav__item"><a class="nav__link" href="who-we-are.html">Sobre</a></li>
+          <li class="nav__item"><a class="nav__link" href="premium.html">Premium</a></li>
+          <li class="nav__item"><a class="nav__link" href="about.html">Sobre</a></li>
           <li class="nav__item"><a class="nav__link" href="contact.html">Contato</a></li>
         </ul>
       </nav>
