--- a/layout-final/premium.html
+++ b/layout-final/premium.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <header class="header">
-
-
       <nav class="nav">
         <div class="header__logo">
           <h1>
@@ -21,8 +19,8 @@
         <ul class="nav__list">
           <li class="nav__item"><a class="nav__link" href="index.html">Home</a></li>
           <li class="nav__item"><a class="nav__link" href="individual.html">individual</a></li>
-          <li class="nav__item"><a class="nav__link" href="combo-premium.html">Combo Premium</a></li>
-          <li class="nav__item"><a class="nav__link" href="who-we-are.html">Quem Somos</a></li>
+          <li class="nav__item"><a class="nav__link" href="premium.html">Premium</a></li>
+          <li class="nav__item"><a class="nav__link" href="about.html">Sobre</a></li>
           <li class="nav__item"><a class="nav__link" href="contact.html">Contato</a></li>
         </ul>
       </nav>
