add requests for pages

--- a/layout-final/individual.html
+++ b/layout-final/individual.html
@@ -103,5 +103,9 @@
     </main>
 
     <footer class="footer">Todos os direitos reservados</footer>
+    <script src="api.js"></script>
+    <script>
+      fetchPage("individual");
+    </script>
   </body>
 </html>
