--- a/layout-final/premium.html
+++ b/layout-final/premium.html
@@ -107,5 +107,10 @@
     </main>
 
     <footer class="footer">Todos os direitos reservados</footer>
+    <script src="api.js"></script>
+
+    <script>
+      fetchPage("combo premium");
+    </script>
   </body>
 </html>
