--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -86,5 +86,9 @@
 
     <footer class="footer">Todos os direitos reservados</footer>
     <script src="../layout-final/script.js"></script>
+    <script src="api.js"></script>
+    <script>
+      fetchPage("home");
+    </script>
   </body>
 </html>
