--- a/layout-final/index.html
+++ b/layout-final/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>La Creditas Restaurant</title>
     <meta charset="utf-8" />
+    <link  href="./image/favicon.ico" rel="icon">
     <link rel="stylesheet" type="text/css" href="css/base/style.css" />
     <link rel="stylesheet" href="./css/pages/style-home.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
